--- a/RestaurantManager/RestaurantManager/RestaurantManager.csproj
+++ b/RestaurantManager/RestaurantManager/RestaurantManager.csproj
@@ -64,6 +64,12 @@
     <Reference Include="TelerikCommon, Version=2015.1.225.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GebruikerBeheer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GebruikerBeheer.Designer.cs">
+      <DependentUpon>GebruikerBeheer.cs</DependentUpon>
+    </Compile>
     <Compile Include="TafelBeheer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="GebruikerBeheer.resx">
+      <DependentUpon>GebruikerBeheer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TafelBeheer.resx">
       <DependentUpon>TafelBeheer.cs</DependentUpon>
     </EmbeddedResource>
