--- a/RestaurantManager/RestaurantManager/RestaurantManager.csproj
+++ b/RestaurantManager/RestaurantManager/RestaurantManager.csproj
@@ -64,12 +64,20 @@
     <Reference Include="TelerikCommon, Version=2015.1.225.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MenuBeheer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuBeheer.Designer.cs">
+      <DependentUpon>MenuBeheer.cs</DependentUpon>
+    </Compile>
     <Compile Include="GebruikerBeheer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GebruikerBeheer.Designer.cs">
       <DependentUpon>GebruikerBeheer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Categorie.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="TafelBeheer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +96,9 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MenuBeheer.resx">
+      <DependentUpon>MenuBeheer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GebruikerBeheer.resx">
       <DependentUpon>GebruikerBeheer.cs</DependentUpon>
     </EmbeddedResource>
@@ -97,17 +108,10 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201506161836559_initial.resx">
-      <DependentUpon>201506161836559_initial.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="Migrations\201506161836559_initial.cs" />
-    <Compile Include="Migrations\201506161836559_initial.Designer.cs">
-      <DependentUpon>201506161836559_initial.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\Gebruiker.cs" />
